--- a/codeFormat/src/main/webapp/WEB-INF/web.xml
+++ b/codeFormat/src/main/webapp/WEB-INF/web.xml
@@ -41,4 +41,8 @@
 	 <servlet-name>default</servlet-name>
 	<url-pattern>*.ttf</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+	 <servlet-name>default</servlet-name>
+	<url-pattern>*.eot</url-pattern>
+	</servlet-mapping>
 </web-app>
